FIX: fixed overflow to only be Y

--- a/css/app.css
+++ b/css/app.css
@@ -142,7 +142,7 @@
   }
 
   .overflow-scroll {
-    overflow: scroll;
+    overflow-y: scroll;
   }
 
 /* COMPONENTS */
